firmware/build/log/idf_py_stdout_output_2036102
[1/24] Linking C static library esp-idf/led_effects/libled_effects.a
[2/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tasks/task_sync_manager.c.obj
[3/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tasks/task_ui_fs.c.obj
[4/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tasks/task_mqtt_client.c.obj
[5/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utils/scheduler.c.obj
[6/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utils/json_config.c.obj
[7/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utils/trigger_engine.c.obj
[8/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tasks/task_rest_server.c.obj
[9/24] Building C object esp-idf/aled_rmt/CMakeFiles/__idf_aled_rmt.dir/aled_rmt.c.obj
FAILED: esp-idf/aled_rmt/CMakeFiles/__idf_aled_rmt.dir/aled_rmt.c.obj 
/home/slaff/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/slaff/Documents/lumigrid-1/firmware/build/config -I/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/include -I/home/slaff/esp/esp-idf/components/newlib/platform_include -I/home/slaff/esp/esp-idf/components/freertos/config/include -I/home/slaff/esp/esp-idf/components/freertos/config/include/freertos -I/home/slaff/esp/esp-idf/components/freertos/config/xtensa/include -I/home/slaff/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/slaff/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/slaff/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/slaff/esp/esp-idf/components/freertos/esp_additions/include -I/home/slaff/esp/esp-idf/components/esp_hw_support/include -I/home/slaff/esp/esp-idf/components/esp_hw_support/include/soc -I/home/slaff/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/slaff/esp/esp-idf/components/esp_hw_support/dma/include -I/home/slaff/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/slaff/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/slaff/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/slaff/esp/esp-idf/components/heap/include -I/home/slaff/esp/esp-idf/components/log/include -I/home/slaff/esp/esp-idf/components/soc/include -I/home/slaff/esp/esp-idf/components/soc/esp32 -I/home/slaff/esp/esp-idf/components/soc/esp32/include -I/home/slaff/esp/esp-idf/components/hal/platform_port/include -I/home/slaff/esp/esp-idf/components/hal/esp32/include -I/home/slaff/esp/esp-idf/components/hal/include -I/home/slaff/esp/esp-idf/components/esp_rom/include -I/home/slaff/esp/esp-idf/components/esp_rom/include/esp32 -I/home/slaff/esp/esp-idf/components/esp_rom/esp32 -I/home/slaff/esp/esp-idf/components/esp_common/include -I/home/slaff/esp/esp-idf/components/esp_system/include -I/home/slaff/esp/esp-idf/components/esp_system/port/soc -I/home/slaff/esp/esp-idf/components/esp_system/port/include/private -I/home/slaff/esp/esp-idf/components/xtensa/esp32/include -I/home/slaff/esp/esp-idf/components/xtensa/include -I/home/slaff/esp/esp-idf/components/xtensa/deprecated_include -I/home/slaff/esp/esp-idf/components/lwip/include -I/home/slaff/esp/esp-idf/components/lwip/include/apps -I/home/slaff/esp/esp-idf/components/lwip/include/apps/sntp -I/home/slaff/esp/esp-idf/components/lwip/lwip/src/include -I/home/slaff/esp/esp-idf/components/lwip/port/include -I/home/slaff/esp/esp-idf/components/lwip/port/freertos/include -I/home/slaff/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/slaff/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/slaff/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/slaff/esp/esp-idf/components/driver/deprecated -I/home/slaff/esp/esp-idf/components/driver/i2c/include -I/home/slaff/esp/esp-idf/components/driver/touch_sensor/include -I/home/slaff/esp/esp-idf/components/driver/twai/include -I/home/slaff/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/slaff/esp/esp-idf/components/esp_pm/include -I/home/slaff/esp/esp-idf/components/esp_ringbuf/include -I/home/slaff/esp/esp-idf/components/esp_driver_gpio/include -I/home/slaff/esp/esp-idf/components/esp_driver_pcnt/include -I/home/slaff/esp/esp-idf/components/esp_driver_gptimer/include -I/home/slaff/esp/esp-idf/components/esp_driver_spi/include -I/home/slaff/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/slaff/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/slaff/esp/esp-idf/components/esp_driver_i2s/include -I/home/slaff/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/slaff/esp/esp-idf/components/sdmmc/include -I/home/slaff/esp/esp-idf/components/esp_driver_sdspi/include -I/home/slaff/esp/esp-idf/components/esp_driver_sdio/include -I/home/slaff/esp/esp-idf/components/esp_driver_dac/include -I/home/slaff/esp/esp-idf/components/esp_driver_rmt/include -I/home/slaff/esp/esp-idf/components/esp_driver_tsens/include -I/home/slaff/esp/esp-idf/components/esp_driver_sdm/include -I/home/slaff/esp/esp-idf/components/esp_driver_i2c/include -I/home/slaff/esp/esp-idf/components/esp_driver_uart/include -I/home/slaff/esp/esp-idf/components/vfs/include -I/home/slaff/esp/esp-idf/components/esp_driver_ledc/include -I/home/slaff/esp/esp-idf/components/esp_driver_parlio/include -I/home/slaff/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/slaff/Documents/lumigrid-1/firmware/components/led_effects/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Os -freorder-blocks -fmacro-prefix-map=/home/slaff/Documents/lumigrid-1/firmware=. -fmacro-prefix-map=/home/slaff/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/aled_rmt/CMakeFiles/__idf_aled_rmt.dir/aled_rmt.c.obj -MF esp-idf/aled_rmt/CMakeFiles/__idf_aled_rmt.dir/aled_rmt.c.obj.d -o esp-idf/aled_rmt/CMakeFiles/__idf_aled_rmt.dir/aled_rmt.c.obj -c /home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c
/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c: In function 'aled_rmt_write':
/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c:99:3: error: unknown type name 'rmt_tx_transmit_config_t'; did you mean 'rmt_transmit_config_t'?
   99 |   rmt_tx_transmit_config_t tc = { .loop_count = 0 };
      |   ^~~~~~~~~~~~~~~~~~~~~~~~
      |   rmt_transmit_config_t
/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c:99:35: error: field name not in record or union initializer
   99 |   rmt_tx_transmit_config_t tc = { .loop_count = 0 };
      |                                   ^
/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c:99:35: note: (near initialization for 'tc')
/home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c:127:100: warning: passing argument 5 of 'rmt_transmit' from incompatible pointer type [-Wincompatible-pointer-types]
  127 |     esp_err_t err = rmt_transmit(s_channels[idx], NULL, symbols, take * sizeof(rmt_symbol_word_t), &tc);
      |                                                                                                    ^~~
      |                                                                                                    |
      |                                                                                                    int *
In file included from /home/slaff/Documents/lumigrid-1/firmware/components/aled_rmt/aled_rmt.c:3:
/home/slaff/esp/esp-idf/components/esp_driver_rmt/include/driver/rmt_tx.h:107:159: note: expected 'const rmt_transmit_config_t *' but argument is of type 'int *'
  107 | esp_err_t rmt_transmit(rmt_channel_handle_t tx_channel, rmt_encoder_handle_t encoder, const void *payload, size_t payload_bytes, const rmt_transmit_config_t *config);
      |                                                                                                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
[10/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utils/diagnostics.c.obj
[11/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/utils/power_budget.c.obj
[12/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tests/test_fx_crc.c.obj
[13/24] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/tasks/task_wifi.c.obj
[14/24] Building C object esp-idf/rest_api/CMakeFiles/__idf_rest_api.dir/rest_api.c.obj
ninja: build stopped: subcommand failed.
